--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="img/flowers.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="flowers.png" type="x-icon">
     <title>Flowers</title>
 </head>
 <body>
@@ -16,10 +16,10 @@
         <span>L</span>
         <span>L</span>
         <span>O</span>
-        <span>I</span>
-        <span>Y</span>
-        <span>A</span>
+        <span>U</span>
         <span>L</span>
+        <span>A</span>
+        <span>N</span>
     </div>
     <div class="description">
         <span>Aku ada hadiah spesial buat kamu!!</span>
